--- a/loeng04/styles.css
+++ b/loeng04/styles.css
@@ -41,3 +41,49 @@ footer>nav {
     display: flex;
     gap: 10px;
 }
+
+.form {
+    width: 400px;
+    height: 440px;
+    padding: 20px 30px;
+    box-sizing: border-box;
+    position: relative
+}
+
+input {
+    width: 100%;
+    padding: 10px;
+    box-sizing: border-box;
+    background: none;
+    outline: none;
+    resize: none;
+    border: 0;
+    transition: all .3s;
+    border-bottom: 2px solid slategray;
+    color: darkslategray;
+}
+
+::placeholder {
+    color: lightseagreen;
+    opacity: 1;
+}
+
+input:focus {
+    border-bottom: 2px solid darkslategray;
+}
+
+button {
+    float: right;
+    padding: 8px 12px;
+    margin: 8px 0 0;
+    border: 2px solid darkslategray;
+    background: 0;
+    color: darkslategray;
+    cursor: pointer;
+    transition: all .3s
+}
+
+button:hover {
+    background: darkslategray;
+    color: #fff
+}
