--- a/matkaklubi/styles.css
+++ b/matkaklubi/styles.css
@@ -75,14 +75,29 @@ h4 {
 
 .pais>.alumine>.sisu>h2 {
     font-size: 40px;
+    margin: 0;
 }
 
 .pais>.alumine>.sisu>h1 {
     font-size: 74px;
+    margin: 0;
 }
 
 .pais>.alumine>.sisu>h4 {
     font-size: 21px;
+    margin-top: 14px;
+    max-width: 477px;
+}
+
+.pais>.alumine>.sisu>button {
+
+    background: #0B0B0B 0% 0% no-repeat padding-box;
+    letter-spacing: 2.25px;
+    color: #FFFFFF;
+    font-weight: 800;
+    padding: 21px 25px;
+    font-size: 12.5px;
+    border: none;
 }
 
 .pais>.alumine>.pilt {
@@ -94,4 +109,105 @@ h4 {
     background-size: cover;
     margin-right: -300px;
     border-radius: 500px;
+}
+
+.teine {
+    padding-left: 80px;
+    margin-top: 120px;
+}
+
+.teine>.ylemine>h3.hall {
+    color: gray;
+    text-transform: uppercase;
+    font-size: 42px;
+}
+
+.teine>.ylemine>h3 {
+    font-size: 54px;
+    font-weight: 600;
+    line-height: 58.33px;
+    margin: 0;
+    max-width: 500px;
+}
+
+.teine>.alumine {
+    display: flex;
+    gap: 34px;
+    justify-content: space-between;
+}
+
+.teine>.alumine>.vasak {
+    display: flex;
+    flex-direction: column;
+    max-width: 500px;
+    margin-top: 25px;
+}
+
+.teine>.alumine>.vasak>section {
+    letter-spacing: 0px;
+    color: gray;
+    font-size: 21px;
+    line-height: 33px;
+    margin-bottom: 150px;
+}
+
+.teine>.alumine>.vasak>.nooled {
+    font-size: 50px;
+    margin-bottom: 100px;
+    display: flex;
+    align-items: center;
+}
+
+.nooled>.vasak,
+.nooled>.parem {
+    font-size: 72px;
+}
+
+.nooled>.kaldkriips {
+    margin: 0 10px;
+}
+
+.nooled>.kaldkriips,
+.nooled>.kokku-lehekylgi,
+.nooled>.parem {
+    color: #9A9A9A;
+}
+
+.nooled>.kaldkriips,
+.nooled>.kokku-lehekylgi {
+    font-size: 36px;
+}
+
+.nooled>.kokku-lehekylgi {
+    margin-top: 6px;
+}
+
+.teine>.alumine>.parem {
+    display: flex;
+    margin-top: 25px;
+    margin-right: -150px;
+}
+
+.teine>.alumine>.parem>.pilt {
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 406px;
+    width: 309px;
+    margin-left: 34px;
+    box-shadow: 28px 29px 119px -16px rgba(0, 0, 0, 0.75);
+}
+
+.teine>.alumine>.parem>.pilt1 {
+    background-image: url('assets/tydruk-binokkel.png');
+}
+
+.teine>.alumine>.parem>.pilt2 {
+    background-image: url('assets/poiss-binokkel.png');
+
+}
+
+.teine>.alumine>.parem>.pilt3 {
+    background-image: url('assets/poisid-kaardiga.png');
+
 }
