--- a/kodune09/styles.css
+++ b/kodune09/styles.css
@@ -19,6 +19,11 @@ h1 {
     padding: 30px;
 }
 
+.uudis>img {
+    width: 250px;
+    height: 150px;
+}
+
 .kokkuvote {
     margin-bottom: 10px;
 }
